 * #3753: Carry over tags from PageTemplates/ (was: TagIt macro)
 * #3864: Unchecked permissions/restrictions for list of available tag realms
 * #3983: ListTagged broken for tags starting with 'or'
 * #4078: Bring back the mincount functionality for the TagCloud macro
 * #4164: Wiki pages without tags have no tag styles
 * #4223: Bad CSS interpretation with IE
 * #4277: Support for MySQL
 * #4996: TagsPlugin fails on upgrading
 * #5345: TracError: The Trac Environment needs to be upgraded
 * #5575: UnicodeEncodeError on Japanese tag
 * #5714: No documentation on WikiMacros page
 * #7857: Regression in Tag query functionality
 * #8352: Chinese character in wiki name cause UnicodeEncodeError
 * #8684: Unexpected keyword argument 'tags_link'
 * #8995: Some missing HTML on wiki edit page
 * #9023: Remove superflous error message about wiki_namespace
 * #9057: Tags with single quote not tokenised correctly
 * #9059: Various fixes and enhancements (detailed in #9060 - #9064)
 * #9060: Query results are duplicated when realm-selection is repeated
 * #9062: Wiki-page level-1-title broken on 0.12
 * #9210: /tags page should not have a contextual navigation link 'Cloud'
 * #9521: New install impossible on Trac 0.13dev
   by adding generic db schema upgrade support
 * TagsQuery now supports a context object
 * refactor cloud rendering so it can be used by other plugins
 * fix regression related to missing IWikiChangeListener
 * ensure tags stylesheet is added for macros 
 * log warning for tag providers that don't implement describe_tagged_resource
 * add plugin author email to display something at Trac 0.11 plugin admin page
 * fix an AttributeError specific to the 0.6 release since [2953]
 * fix an Error for `TagCloud` macro when being called without arguments
 * improve formatting of header for `tag_view.html` page template
 * do TagSystem class API cleanup by moving db access to model layer
 
 new features
 * #2509: Create wiki page from /tags/<tag> page